Fix wpuf form error alignment with form inputs

--- a/assets/less/frontend-forms.less
+++ b/assets/less/frontend-forms.less
@@ -109,7 +109,7 @@
     background-color: #f2dede;
     color: #a94442;
     border: 1px solid #ebccd1;
-    margin: 10px 0 20px 0;
+    margin: 10px 10px 20px;
     padding: 10px;
     .border-radius(3px);
     font-size: 13px;
